2022-03-16  Jose E. Marchesi  <jemarch@gnu.org>

	* emacs/poke.el (poke-vu-refresh): Ask for the right number of
	lines, taking the header and modeline into account.
	(poke-repl): Do not show banner if repl is already alive.

2022-03-16  Jose E. Marchesi  <jemarch@gnu.org>
2022-03-16  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/ios-dev-stream.c (ios_dev_stream_pread): Fix call to
	fread.

2022-03-15  Jose E. Marchesi  <jemarch@gnu.org>

	* poked/pk-dump-minimal.pk: Print in larger chunks.

2022-03-15  Jose E. Marchesi  <jemarch@gnu.org>

	* emacs/poke.el (poke-make-pokelet-process-new): Get unibyte input
	in the pokelet processes.

2022-03-15  Jose E. Marchesi  <jemarch@gnu.org>

	* poked/pk-dump-minimal.pk: Minimize pokelet commands when dumping
	bytes.

2022-03-15  Jose E. Marchesi  <jemarch@gnu.org>

	* emacs/poke.el: Update version to 2.1.
	(poke-repl-cmd-goto-ios): Define.
	(poke-repl-mode-map): Likewise.

2022-03-15  Jose E. Marchesi  <jemarch@gnu.org>

	* emacs/poke.el (poke-ios-overlay): Define.
	(poke-ios-update-overlay): Likewise.
	(poke-ios-mode-map): Register keys for poke-ios-cmd-next and
	poke-ios-cmd-prev.
	(poke-ios-cmd-next): Define.
	(poke-ios-cmd-prev): Likewise.

2022-03-14  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/std.pk (openset): Define.
	* doc/poke.texi (openset): New section.
	* testsuite/poke.pkl/open-set-1.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

2022-03-14  Jose E. Marchesi  <jemarch@gnu.org>

	* configure.ac: Remove checks for json-c and
	machine-interface stuff.
	* DEPENDENCIES: Remove dependency on json-c.
	* poke/pk-mi.h: Likewise.
	* poke/pk-mi.c (pk_mi): Likewise.
	* poke/pk-mi*.[ch]: Remove.
	* poke/poke.c (print_help): Remove --help output for the machine
	interface.
	(parse_args_1): Do not handle --mi.
	(main): Do not enter the MI.

	* poke/Makefile.am: Remove MI-related stuff.
	* testsuite/Makefile.am: Likewise.
	* testsuite/poke.mi-json: Remove directory and tests.